@@ -1,13 +1,12 @@
 package eu.epsos.protocolterminators.integrationtest.common;
 
 import eu.europa.ec.sante.ehdsi.openncp.assertionvalidator.PurposeOfUse;
+import eu.europa.ec.sante.ehdsi.openncp.assertionvalidator.saml.SAML;
 import eu.europa.ec.sante.ehdsi.openncp.configmanager.ConfigurationManagerFactory;
 import eu.europa.ec.sante.ehdsi.openncp.util.security.CryptographicConstant;
-import org.joda.time.DateTime;
 import org.opensaml.core.xml.Namespace;
 import org.opensaml.core.xml.XMLObjectBuilder;
 import org.opensaml.core.xml.config.XMLObjectProviderRegistrySupport;
-import org.opensaml.core.xml.io.Marshaller;
 import org.opensaml.core.xml.schema.XSAny;
 import org.opensaml.saml.common.SAMLVersion;
 import org.opensaml.saml.saml2.core.*;
@@ -17,12 +16,12 @@ import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import tr.com.srdc.epsos.util.Constants;
-import eu.europa.ec.sante.ehdsi.openncp.assertionvalidator.saml.SAML;
 
-import javax.xml.crypto.dsig.*;
+import javax.xml.XMLConstants;
+import javax.xml.crypto.dsig.Transform;
+import javax.xml.crypto.dsig.XMLSignatureFactory;
 import javax.xml.crypto.dsig.dom.DOMSignContext;
 import javax.xml.crypto.dsig.keyinfo.KeyInfo;
-import javax.xml.crypto.dsig.keyinfo.KeyInfoFactory;
 import javax.xml.crypto.dsig.spec.C14NMethodParameterSpec;
 import javax.xml.crypto.dsig.spec.TransformParameterSpec;
 import javax.xml.namespace.QName;
@@ -32,6 +31,8 @@ import java.security.KeyStore;
 import java.security.KeyStore.PasswordProtection;
 import java.security.KeyStore.PrivateKeyEntry;
 import java.security.Provider;
+import java.time.Duration;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -54,15 +55,14 @@ public class TRCAssertionCreator {
         KeyPair keyPair;
         KeyInfo keyInfo;
 
-        SAML saml = new SAML();
-
-        Subject subject = saml.createSubject("physician", "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified", "sender-vouches");
+        var saml = new SAML();
+        var subject = saml.createSubject("physician", "urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified", "sender-vouches");
 
         // Create assertion
-        Assertion assertion = saml.createAssertion(subject);
+        var assertion = saml.createAssertion(subject);
 
         String countryCode = ConfigurationManagerFactory.getConfigurationManager().getProperty("COUNTRY_CODE");
-        Issuer issuer = saml.create(Issuer.class, Issuer.DEFAULT_ELEMENT_NAME);
+        var issuer = saml.create(Issuer.class, Issuer.DEFAULT_ELEMENT_NAME);
         issuer.setValue("urn:initgw:" + countryCode + ":countryB");
         issuer.setFormat("urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified");
         issuer.setNameQualifier("urn:epsos:wp34:assertions");
@@ -73,36 +73,36 @@ public class TRCAssertionCreator {
         assertion.setVersion(version);
 
         // Set AuthnStatement
-        DateTime dateTime = new DateTime();
-        AuthnStatement authnStatement = saml.create(AuthnStatement.class, AuthnStatement.DEFAULT_ELEMENT_NAME);
-        authnStatement.setAuthnInstant(dateTime);
-        authnStatement.setSessionNotOnOrAfter(dateTime.plusHours(2));
+        var issueInstant = Instant.now();
+        var authnStatement = saml.create(AuthnStatement.class, AuthnStatement.DEFAULT_ELEMENT_NAME);
+        authnStatement.setAuthnInstant(issueInstant);
+        authnStatement.setSessionNotOnOrAfter(issueInstant.plus(Duration.ofHours(2)));
 
         // Set AuthnStatement/AuthnContext
-        AuthnContext authnContext = saml.create(AuthnContext.class, AuthnContext.DEFAULT_ELEMENT_NAME);
-        AuthnContextClassRef authnContextClassRef = saml.create(AuthnContextClassRef.class, AuthnContextClassRef.DEFAULT_ELEMENT_NAME);
-        authnContextClassRef.setAuthnContextClassRef("urn:oasis:names:tc:SAML:2.0:ac:classes:PreviousSession");
+        var authnContext = saml.create(AuthnContext.class, AuthnContext.DEFAULT_ELEMENT_NAME);
+        var authnContextClassRef = saml.create(AuthnContextClassRef.class, AuthnContextClassRef.DEFAULT_ELEMENT_NAME);
+        authnContextClassRef.setURI("urn:oasis:names:tc:SAML:2.0:ac:classes:PreviousSession");
         authnContext.setAuthnContextClassRef(authnContextClassRef);
         authnStatement.setAuthnContext(authnContext);
         assertion.getAuthnStatements().add(authnStatement);
 
         // Set Advice
-        Advice advice = saml.create(Advice.class, Advice.DEFAULT_ELEMENT_NAME);
-        AssertionIDRef aidr = saml.create(AssertionIDRef.class, AssertionIDRef.DEFAULT_ELEMENT_NAME);
+        var advice = saml.create(Advice.class, Advice.DEFAULT_ELEMENT_NAME);
+        var assertionIDRef = saml.create(AssertionIDRef.class, AssertionIDRef.DEFAULT_ELEMENT_NAME);
         if (hcpAssertionId == null) {
-            aidr.setAssertionID(assertion.getID());
+            assertionIDRef.setValue(assertion.getID());
         } else {
-            aidr.setAssertionID(hcpAssertionId);
+            assertionIDRef.setValue(hcpAssertionId);
         }
-        advice.getAssertionIDReferences().add(aidr);
+        advice.getAssertionIDReferences().add(assertionIDRef);
         assertion.setAdvice(advice);
 
         // Create AttributeStatement
-        AttributeStatement attributeStatement = saml.create(AttributeStatement.class, AttributeStatement.DEFAULT_ELEMENT_NAME);
+        var attributeStatement = saml.create(AttributeStatement.class, AttributeStatement.DEFAULT_ELEMENT_NAME);
 
         // Namespaces
-        Namespace ns1 = new Namespace("http://www.w3.org/2001/XMLSchema", "xs");
-        Namespace ns2 = new Namespace("http://www.w3.org/2001/XMLSchema-instance", "xsi");
+        var ns1 = new Namespace(XMLConstants.W3C_XML_SCHEMA_NS_URI, "xs");
+        var ns2 = new Namespace(XMLConstants.W3C_XML_SCHEMA_INSTANCE_NS_URI, "xsi");
 
         // Set HCP Identifier
         if (true) {
@@ -118,7 +118,7 @@ public class TRCAssertionCreator {
 
             attVal.getNamespaceManager().registerNamespaceDeclaration(ns1);
             attVal.getNamespaceManager().registerNamespaceDeclaration(ns2);
-            QName attributeName = new QName("http://www.w3.org/2001/XMLSchema-instance", "type", "xsi");
+            QName attributeName = new QName(XMLConstants.W3C_XML_SCHEMA_INSTANCE_NS_URI, "type", "xsi");
             attVal.getUnknownAttributes().put(attributeName, "xs:string");
 
             att.getAttributeValues().add(attVal);
@@ -139,7 +139,7 @@ public class TRCAssertionCreator {
 
             attVal.getNamespaceManager().registerNamespaceDeclaration(ns1);
             attVal.getNamespaceManager().registerNamespaceDeclaration(ns2);
-            QName attributeName = new QName("http://www.w3.org/2001/XMLSchema-instance", "type", "xsi");
+            QName attributeName = new QName(XMLConstants.W3C_XML_SCHEMA_INSTANCE_NS_URI, "type", "xsi");
             attVal.getUnknownAttributes().put(attributeName, "xs:string");
 
             att.getAttributeValues().add(attVal);
@@ -152,58 +152,57 @@ public class TRCAssertionCreator {
         // Set Signature
         try {
             // Set assertion.DOM
-            Marshaller marshaller = XMLObjectProviderRegistrySupport.getMarshallerFactory().getMarshaller(assertion);
+            var marshaller = XMLObjectProviderRegistrySupport.getMarshallerFactory().getMarshaller(assertion);
             Element elem;
             elem = marshaller.marshall(assertion);
             assertion.setDOM(elem);
 
             // Set factory
             String providerName = System.getProperty("jsr105Provider", "org.jcp.xml.dsig.internal.dom.XMLDSigRI");
-            factory = XMLSignatureFactory.getInstance("DOM", (Provider) Class.forName(providerName).newInstance());
+            factory = XMLSignatureFactory.getInstance("DOM", (Provider) Class.forName(providerName).getDeclaredConstructor().newInstance());
 
             // Set keyStore
-            FileInputStream is = new FileInputStream(Constants.SC_KEYSTORE_PATH);
-            keyStore = KeyStore.getInstance("JKS");
-            keyStore.load(is, Constants.SC_KEYSTORE_PASSWORD.toCharArray());
-            is.close();
-
-            PasswordProtection pp = new PasswordProtection(Constants.SC_PRIVATEKEY_PASSWORD.toCharArray());
-            PrivateKeyEntry entry = (PrivateKeyEntry) keyStore.getEntry(Constants.SC_PRIVATEKEY_ALIAS, pp);
+            try (var fileInputStream = new FileInputStream(Constants.SC_KEYSTORE_PATH)) {
+                keyStore = KeyStore.getInstance("JKS");
+                keyStore.load(fileInputStream, Constants.SC_KEYSTORE_PASSWORD.toCharArray());
+            }
+            var passwordProtection = new PasswordProtection(Constants.SC_PRIVATEKEY_PASSWORD.toCharArray());
+            var privateKeyEntry = (PrivateKeyEntry) keyStore.getEntry(Constants.SC_PRIVATEKEY_ALIAS, passwordProtection);
 
             // Set keyPair
-            keyPair = new KeyPair(entry.getCertificate().getPublicKey(), entry.getPrivateKey());
+            keyPair = new KeyPair(privateKeyEntry.getCertificate().getPublicKey(), privateKeyEntry.getPrivateKey());
 
             // Set keyInfo
-            KeyInfoFactory kFactory = factory.getKeyInfoFactory();
-            keyInfo = kFactory.newKeyInfo(Collections.singletonList(kFactory.newX509Data(Collections.singletonList(entry.getCertificate()))));
+            var keyInfoFactory = factory.getKeyInfoFactory();
+            keyInfo = keyInfoFactory.newKeyInfo(Collections.singletonList(keyInfoFactory.newX509Data(Collections.singletonList(privateKeyEntry.getCertificate()))));
 
             // Create Signature/SignedInfo/Reference
             List<Transform> lst = new ArrayList<>();
             lst.add(factory.newTransform(Transform.ENVELOPED, (TransformParameterSpec) null));
             lst.add(factory.newTransform(CryptographicConstant.ALGO_ID_C14N_EXCL_OMIT_COMMENTS, (TransformParameterSpec) null));
-            Reference ref = factory.newReference("#" + assertion.getID(), factory.newDigestMethod(CryptographicConstant.ALGO_ID_DIGEST_SHA256, null), lst, null, null);
+            var reference = factory.newReference("#" + assertion.getID(), factory.newDigestMethod(CryptographicConstant.ALGO_ID_DIGEST_SHA256, null), lst, null, null);
 
             // Set Signature/SignedInfo
-            SignedInfo signedInfo = factory.newSignedInfo(
+            var signedInfo = factory.newSignedInfo(
                     factory.newCanonicalizationMethod(CryptographicConstant.ALGO_ID_C14N_EXCL_WITH_COMMENTS, (C14NMethodParameterSpec) null),
-                    factory.newSignatureMethod(CryptographicConstant.ALGO_ID_SIGNATURE_RSA_SHA256, null), Collections.singletonList(ref));
+                    factory.newSignatureMethod(CryptographicConstant.ALGO_ID_SIGNATURE_RSA_SHA256, null), Collections.singletonList(reference));
 
             // Sign Assertion
-            XMLSignature signature = factory.newXMLSignature(signedInfo, keyInfo);
-            DOMSignContext signContext = new DOMSignContext(keyPair.getPrivate(), assertion.getDOM());
-            signature.sign(signContext);
+            var xmlSignature = factory.newXMLSignature(signedInfo, keyInfo);
+            var domSignContext = new DOMSignContext(keyPair.getPrivate(), assertion.getDOM());
+            xmlSignature.sign(domSignContext);
         } catch (Exception e) {
             LOGGER.error("Signature element not created: '{}'", e.getLocalizedMessage(), e);
         }
 
         // Set Signature's place
-        org.w3c.dom.Node signatureElement = assertion.getDOM().getLastChild();
+        Node signatureElement = assertion.getDOM().getLastChild();
 
-        boolean foundIssuer = false;
-        org.w3c.dom.Node elementAfterIssuer = null;
+        var foundIssuer = false;
+        Node elementAfterIssuer = null;
         NodeList children = assertion.getDOM().getChildNodes();
-        for (int c = 0; c < children.getLength(); ++c) {
-            org.w3c.dom.Node child = children.item(c);
+        for (var c = 0; c < children.getLength(); ++c) {
+            Node child = children.item(c);
 
             if (foundIssuer) {
                 elementAfterIssuer = child;
